<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="@dimen/common_space_10"
        android:paddingBottom="@dimen/common_space_10"
        android:paddingStart="@dimen/common_space_15"
        android:paddingEnd="@dimen/common_space_15">

        <TextView
            android:id="@+id/home_textview2"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/home_textview3"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="从"
            android:layout_marginStart="@dimen/common_space_30"
            app:layout_constraintTop_toTopOf="@+id/home_textview2"
            app:layout_constraintLeft_toRightOf="@+id/home_textview2"/>

        <TextView
            android:id="@+id/tv_time_start"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_choose_start_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/home_textview5"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="至"
            android:layout_marginTop="@dimen/common_space_25"
            app:layout_constraintLeft_toLeftOf="@+id/home_textview3"
            app:layout_constraintRight_toRightOf="@+id/home_textview3"
            app:layout_constraintTop_toBottomOf="@+id/home_textview3"/>

        <TextView
            android:id="@+id/tv_time_end"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_choose_end_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_textview5"
            app:layout_constraintBottom_toBottomOf="@id/home_textview5"/>

        <View
            android:id="@+id/view_div"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_divder_height"
            android:layout_marginTop="@dimen/common_space_15"
            android:background="@color/common_divder_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_end"/>

        <TextView
            android:id="@+id/home_textview6"
            style="@style/common_text_content_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_old_man"
            android:layout_marginTop="@dimen/common_space_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_div"/>

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_man_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_textview6"
            app:layout_constraintBottom_toBottomOf="@+id/home_textview6"/>

        <Button
            android:id="@+id/btn_search"
            android:background="@drawable/common_smallcorner_theme_btn_bg"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_text_content"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:text="@string/home_search"
            android:layout_marginTop="@dimen/common_space_15"
            android:paddingStart="@dimen/common_space_20"
            android:paddingEnd="@dimen/common_space_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_textview6"/>

        <Button
            android:id="@+id/btn_reset"
            android:background="@drawable/common_smallcorner_white_btn_bg"
            android:textColor="@color/common_theme"
            android:textSize="@dimen/common_text_content"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:text="@string/home_reset"
            android:layout_marginStart="@dimen/common_space_10"
            android:paddingStart="@dimen/common_space_20"
            android:paddingEnd="@dimen/common_space_20"
            app:layout_constraintTop_toTopOf="@+id/btn_search"
            app:layout_constraintBottom_toBottomOf="@+id/btn_search"
            app:layout_constraintLeft_toRightOf="@+id/btn_search"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/common_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_one"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>